--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Open+Sans&family=Oswald&display=swap');
 
 :root {
   --primary-color: rgb(255, 92, 92);
@@ -47,6 +47,7 @@ h1 {
   font-family: 'Kaushan Script', cursive;}
 
 h2 {
+  color: var(--on-background-alt);
   font-size: 32px;
   font-weight: normal;
 }
@@ -55,6 +56,7 @@ h2 {
 nav {
   z-index: 10;
   position: fixed;
+  font-family: 'Oswald', sans-serif;
   font-size: 24px;
   letter-spacing: 3px;
   padding: 25px;
